open is default status is somehow we didn't get it from chatwoot, skip building image on non-main repos

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   build-and-push:
+    if: github.repository == 'eremeye/chatdify'
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE_NAME: ${{ secrets.CUSTOM_IMAGE_NAME || github.repository }}
